#820 - better translation names for letter R to Z, refs #820

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -4,7 +4,7 @@
 #customer_big.icon=icons/Autofusion_big.png
 
 small_logo.icon=icons/PowerFolder_32x32.gif
-startdownloads.icon=icons/Play.gif
+start_downloads.icon=icons/Play.gif
 abort_download.icon=icons/Abort.gif
 clear_completed_downloads.icon=icons/Clear.gif
 clear_completed_uploads.icon=icons/Clear.gif
@@ -12,24 +12,24 @@ clearrecentdownloads.icon=icons/Clear.gif
 #connect.icon=icons/Connect.gif
 #disable_silent_mode.icon=icons/ScansDisabled.gif
 #enable_silent_mode.icon=icons/SyncMode.gif
-#scanfolder.icon=icons/FileList.gif
+#scan_folder.icon=icons/FileList.gif
 #folder_create.icon=icons/FolderCreate.gif
 #preferences.icon=icons/Settings.gif
 #preferences.dialog.icon=icons/Settings.gif
 #about.icon=icons/PowerFolder.gif
 #about.dialog.icon=icons/PowerFolder.gif
-#requestfilelist.icon=icons/FileList.gif
+#request_file_list.icon=icons/FileList.gif
 #add_friend.icon=icons/Node.gif
 #add_modifier_friend.icon=icons/Node.gif
-#removefriend.icon=icons/Node_orange.gif
-#removemodifierfriend.icon=icons/Node_orange.gif
-#setmasternode.icon=icons/Node.gif
-showfileinfo.icon=icons/SendMessage.gif
+#remove_friend.icon=icons/Node_orange.gif
+#remove_modifier_friend.icon=icons/Node_orange.gif
+#set_master_node.icon=icons/Node.gif
+show_file_info.icon=icons/SendMessage.gif
 abort_transfer.icon=icons/Abort.gif
 folders.icon=icons/Folders.gif
 folder_invalid.icon=icons/Folder_invalid.gif
 #open_chat.icon=icons/Chat.gif
-#sendinvitation.icon=icons/Chat.gif
+#send_invitation.icon=icons/Chat.gif
 #reconnect.icon=icons/Connect.gif
 open_file.icon=icons/Play.gif
 addpattern.icon=icons/Pattern.gif
@@ -46,7 +46,7 @@ remove_from_recycle_bin.icon=icons/Delete.gif
 #un_black_list.icon=icons/UnList.gif
 #un_white_list.icon=icons/UnList.gif
 abort_copy.icon=icons/Forbid.gif
-showhidefiledetails.icon=icons/Properties.gif
+show_hide_file_details.icon=icons/Properties.gif
 question.icon=icons/Question.gif
 
 # Toolbar icons
@@ -177,6 +177,6 @@ sync_unknown.icon=icons/sync/Sync_unknown.png
 preview_files.icon=
 folder_join.icon=
 empty_recycle_bin.icon=
-restorefile.icon=
+restore_file.icon=
 plugin_settings.icon=
 plugin_enable.icon=
