--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1057,35 +1057,35 @@ remove_previews_action.remove=Remove
 remove_previews_action.text=Do you want to remove all preview folders?
 remove_previews_action.title=Remove all preview folders
 
-removefriend.description=Removes user from friend list
-removefriend.key=r
-removefriend.name=Remove Friend
+remove_friend.description=Removes user from friend list
+remove_friend.key=r
+remove_friend.name=Remove Friend
 
-removemodifierfriend.description=Removes the file modifier from friend list
-removemodifierfriend.key=r
-removemodifierfriend.name=Remove Modifier from Friends
+remove_modifier_friend.description=Removes the file modifier from friend list
+remove_modifier_friend.key=r
+remove_modifier_friend.name=Remove Modifier from Friends
 
-requestfilelist.description=Refreshes the file list of that folder from remote users
-requestfilelist.key=f
-requestfilelist.name=Request new File list
+request_file_list.description=Refreshes the file list of that folder from remote users
+request_file_list.key=f
+request_file_list.name=Request new File list
 
 restore.busy.description=Moving files from the PowerFolder recycle bin to your folder
 restore.busy.title=Restoring file(s)
 
-restorefile.description=Undelete file
-restorefile.key=r
-restorefile.name=Restore File
+restore_file.description=Undelete file
+restore_file.key=r
+restore_file.name=Restore File
 
-rootpanel.connected_users=Connected Users
-rootpanel.friends=Friends
+root_panel.connected_users=Connected Users
+root_panel.friends=Friends
 
-scanallfolders.description=Synchronizes all folders now (F5)
-scanallfolders.key=F
-scanallfolders.name=Sync Folders
+scan_all_folders.description=Synchronizes all folders now (F5)
+scan_all_folders.key=F
+scan_all_folders.name=Sync Folders
 
-scanfolder.description=Checks folder for file changes now (Alt-1)
-scanfolder.key=s
-scanfolder.name=Sync Now
+scan_folder.description=Checks folder for file changes now (Alt-1)
+scan_folder.key=s
+scan_folder.name=Sync Now
 
 select_invitation.folder_text=Select folder to send invitation for
 select_invitation.message_text=Enter a message for the receiver
@@ -1097,27 +1097,27 @@ send_invitation.multi_users=Multiple users selected
 send_invitation.no_users=No users selected
 send_invitation.select_user.text=Select user
 
-sendinvitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
-sendinvitation.allFolders.title={0} already on all folders
-sendinvitation.ask_emailaddres.message=Email address to send invitation to
-sendinvitation.ask_emailaddres.title=Email address
-sendinvitation.body=Hello {0},<br><br>{1} invites you to the PowerFolder '{2}'<br>This invitation is used to access a private folder hosted by {1}.<br><br>1) To access the files you first need to download and install the free<br>software PowerFolder from<br>http\://www.powerfolder.com.<br><br>2) After you have installed PowerFolder double-click the invitation<br>file attached to this email.<br><br>For more information or help installing or using PowerFolder please<br>visit our Documentation Resources at http\://docs.powerfolder.com<br><br>Thank You,<br>The PowerFolder Development Team<br>PowerFolder, Professional Folder Sharing<br>
-sendinvitation.description=Invites a user to a folder
-sendinvitation.email=To email...
-sendinvitation.folder.text=Send invitation to
-sendinvitation.folder.title=Send Invitation
-sendinvitation.key=i
-sendinvitation.name=Send Invitation
-sendinvitation.placetostore=Choose a place to store invitation
-sendinvitation.subject=Invitation to the PowerFolder '{0}'
-sendinvitation.toclipboard=To clipboard...
-sendinvitation.todisk=To disk...
+send_invitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
+send_invitation.allFolders.title={0} already on all folders
+send_invitation.ask_emailaddres.message=Email address to send invitation to
+send_invitation.ask_emailaddres.title=Email address
+send_invitation.body=Hello {0},<br><br>{1} invites you to the PowerFolder '{2}'<br>This invitation is used to access a private folder hosted by {1}.<br><br>1) To access the files you first need to download and install the free<br>software PowerFolder from<br>http\://www.powerfolder.com.<br><br>2) After you have installed PowerFolder double-click the invitation<br>file attached to this email.<br><br>For more information or help installing or using PowerFolder please<br>visit our Documentation Resources at http\://docs.powerfolder.com<br><br>Thank You,<br>The PowerFolder Development Team<br>PowerFolder, Professional Folder Sharing<br>
+send_invitation.description=Invites a user to a folder
+send_invitation.email=To email...
+send_invitation.folder.text=Send invitation to
+send_invitation.folder.title=Send Invitation
+send_invitation.key=i
+send_invitation.name=Send Invitation
+send_invitation.placetostore=Choose a place to store invitation
+send_invitation.subject=Invitation to the PowerFolder '{0}'
+send_invitation.toclipboard=To clipboard...
+send_invitation.todisk=To disk...
 
-setmasternode.description=Selects the administration user for your friend list. Friend list loaded from adminitrator
-setmasternode.dialog.text=Select the administrator for your friend list
-setmasternode.dialog.title=Friend list administrator
-setmasternode.key=a
-setmasternode.name=Select Admin User
+set_master_node.description=Selects the administration user for your friend list. Friend list loaded from adminitrator
+set_master_node.dialog.text=Select the administrator for your friend list
+set_master_node.dialog.title=Friend list administrator
+set_master_node.key=a
+set_master_node.name=Select Admin User
 
 setup.description=Sets up new or joins existing PowerFolders
 setup.key=s
@@ -1127,32 +1127,32 @@ show_preview.description=Preview folders will be visible in lists of folders
 show_preview.key=S
 show_preview.name=Show Preview Folders
 
-showfileinfo.description=Shows detail information about the selected file
-showfileinfo.key=p
-showfileinfo.name=File Properties
+show_file_info.description=Shows detail information about the selected file
+show_file_info.key=p
+show_file_info.name=File Properties
 
-showhidefiledetails.description=Shows/Hides detailed information about the selected file (Alt-4)
-showhidefiledetails.key=d
-showhidefiledetails.name=Details
+show_hide_file_details.description=Shows/Hides detailed information about the selected file (Alt-4)
+show_hide_file_details.key=d
+show_hide_file_details.name=Details
 
 splash.version=Version {0}
 
 start.file.unable.text=Unable to start\n{0}
 start.file.unable.title=Unable to start
 
-startdownloads.description=Opens the selected downloaded files
-startdownloads.key=O
-startdownloads.name=Open
+start_downloads.description=Opens the selected downloaded files
+start_downloads.key=O
+start_downloads.name=Open
 
 status.download=Down\: %.2f KB/s
 status.port=Port\: {0}
 status.upload=Up\: %.2f KB/s
 
-statusbar.status_change.connected=PowerFolder is connected
-statusbar.status_change.disabled=PowerFolder is disabled
-statusbar.status_change.disconnected=PowerFolder is disconnected
-statusbar.status_change.title=Connection Status
-statusbar.synchronizing=Synchronizing...
+status_bar.status_change.connected=PowerFolder is connected
+status_bar.status_change.disabled=PowerFolder is disabled
+status_bar.status_change.disconnected=PowerFolder is disconnected
+status_bar.status_change.title=Connection Status
+status_bar.synchronizing=Synchronizing...
 
 sync_folder_rights.description=Syncs the folder memberships with own account. Adds available PowerFolder to the preview.
 sync_folder_rights.key=S
@@ -1164,31 +1164,31 @@ synchronisation.warning.automatic_deletions_notice=This mode will also synchroni
 synchronisation.warning.explanation=You have selected transfer mode '{0}' for folder {1}.
 synchronisation.warning.title=Activate transfer mode {0} for {1}
 
-syncprofile.autodownload_friends.name=Auto-download friends
-syncprofile.automatic_download.name=Automatic download
-syncprofile.automatic_synchronization.name=Automatic synchronization
-syncprofile.backup_source.name=Backup (source)
-syncprofile.backup_target.name=Backup (target)
-syncprofile.custom.name=Custom profile
-syncprofile.disabled.name=Disabled
-syncprofile.host_files.name=Share/Send
-syncprofile.manual_synchronization.name=Manual synchronization
-syncprofile.no_sync.name=No synchronization
+transfer_mode.auto_download_friends.name=Auto-download friends
+transfer_mode.automatic_download.name=Automatic download
+transfer_mode.automatic_synchronization.name=Automatic synchronization
+transfer_mode.backup_source.name=Backup (source)
+transfer_mode.backup_target.name=Backup (target)
+transfer_mode.custom.name=Custom profile
+transfer_mode.disabled.name=Disabled
+transfer_mode.host_files.name=Share/Send
+transfer_mode.manual_synchronization.name=Manual synchronization
+transfer_mode.no_sync.name=No synchronization
 
-systemservice.options.info1=Use these options install/uninstall
-systemservice.options.info2=PowerFolder as system service.
-systemservice.options.install=Install
-systemservice.options.title=PowerFolder System Service
-systemservice.options.uninstall=Uninstall
+system_service.options.info1=Use these options install/uninstall
+system_service.options.info2=PowerFolder as system service.
+system_service.options.install=Install
+system_service.options.title=PowerFolder System Service
+system_service.options.uninstall=Uninstall
 
 systray.exit=Exit
 systray.hide=Hide
 systray.powerfolder=PowerFolder v{0}
 systray.show=Show
-systray.syncall=Sync Folders
+systray.sync_all=Sync Folders
 systray.tooltip.down=Down {0} KBs
 systray.tooltip.down.mb=Down {0} MBs
-systray.tooltip.insync=InSync
+systray.tooltip.in_sync=InSync
 systray.tooltip.syncing=Syncing
 systray.tooltip.up=Up {0} KBs
 systray.tooltip.up.mb=Up {0} MBs
@@ -1227,7 +1227,7 @@ transfers.local=local
 transfers.pending=Pending
 transfers.progress=Progress
 transfers.queued=Queued
-transfers.remotehashing=Preparing
+transfers.remote_hashing=Preparing
 transfers.requested=Requested
 transfers.searching=Searching...
 transfers.to=To
@@ -1271,25 +1271,25 @@ white_list.name=Add to ignore patterns
 winutils.shortcut.description=This shortcut was placed here by PowerFolder
 
 wizard.backup_panel.folder_backup_success=You successfully set up a folder backup\!\n
-wizard.backup_panel.pcsjoin=Other computers can join this folder now
+wizard.backup_panel.pcs_join=Other computers can join this folder now
 wizard.backup_panel.select=Please select the directory which should be backed up
-wizard.basicsetup.computer_name=Name of this computer
-wizard.basicsetup.default_folder_name=Synchronized Files
-wizard.basicsetup.lanonly=LAN only
-wizard.basicsetup.networking=Connect to
+wizard.basic_setup.computer_name=Name of this computer
+wizard.basic_setup.default_folder_name=Synchronized Files
+wizard.basic_setup.lan_only=LAN only
+wizard.basic_setup.networking=Connect to
 wizard.basic_setup.language_restart=Language (requires restart)
-wizard.basicsetup.private=LAN and Internet
-wizard.basicsetup.trusted=Trusted only
-wizard.basicsetup.title=Basic Setup
-wizard.basicsetup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
-wizard.basicsetup.upload.title=Unlimited connection speed
+wizard.basic_setup.private=LAN and Internet
+wizard.basic_setup.trusted=Trusted only
+wizard.basic_setup.title=Basic Setup
+wizard.basic_setup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
+wizard.basic_setup.upload.title=Unlimited connection speed
 wizard.choose_location.select=Please select the directory
-wizard.choosedisklocation.calculating_directory_size=Calculating size of directory...
-wizard.choosedisklocation.directory_size=Directory size {0}
-wizard.choosedisklocation.directory_non_existent=WARNING: This directory does not exist
-wizard.choosedisklocation.directory_no_write=WARNING: This directory cannot be written to
-wizard.choosedisklocation.select=Select directory
-wizard.choosedisklocation.title=Disk location
+wizard.choose_disk_location.calculating_directory_size=Calculating size of directory...
+wizard.choose_disk_location.directory_size=Directory size {0}
+wizard.choose_disk_location.directory_non_existent=WARNING: This directory does not exist
+wizard.choose_disk_location.directory_no_write=WARNING: This directory cannot be written to
+wizard.choose_disk_location.select=Select directory
+wizard.choose_disk_location.title=Disk location
 wizard.control.back=< Back
 wizard.control.back.description=Go to previous wizard step
 wizard.control.cancel=Cancel
@@ -1303,25 +1303,25 @@ wizard.control.next.description=Go to next wizard step
 wizard.create_folder.failed=Failed to create PowerFolder.
 wizard.create_folder.title=Creating PowerFolder
 wizard.create_folder.working=Creating PowerFolder, please wait.
-wizard.filesharing.sharedsuccess=You successfully shared a new folder\!\nOther users may join now
+wizard.file_sharing.shared_success=You successfully shared a new folder\!\nOther users may join now
 wizard.folder_invitation.intro=You have received an invitation from {0}
 wizard.folder_invitation.title=Folder Invitation
 wizard.host_panel.folder_host_success=You successfully set up a host folder\!\n
-wizard.host_panel.pcsjoin=Other computers can join this folder now
+wizard.host_panel.pcs_join=Other computers can join this folder now
 wizard.host_panel.select=Please select the directory which should be the host
-wizard.invite.selectlocaldirectory=Please select local target directory for the files
-wizard.load_invitation.addtofriends=Add {0} to friends
-wizard.load_invitation.choosefile=Choose the invitation file
+wizard.invite.select_local_directory=Please select local target directory for the files
+wizard.load_invitation.add_to_friends=Add {0} to friends
+wizard.load_invitation.choose_file=Choose the invitation file
 wizard.load_invitation.select=Select invitation file
-wizard.load_invitation.selectfile=Please select invitation file
+wizard.load_invitation.select_file=Please select invitation file
 wizard.load_invitation.title=Load invitation
 wizard.login_online_storage.setup_default=Setup default synchronized folder.
 wizard.pfwizard.title=Wizard
 wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
 wizard.project_panel.select=Please select the project directory
-wizard.projectname.choose=Choose project name
-wizard.projectname.entername=Enter the name of your project
-wizard.projectname.title=Load invitation
+wizard.project_name.choose=Choose project name
+wizard.project_name.enter_name=Enter the name of your project
+wizard.project_name.title=Load invitation
 wizard.send_invitations.invitation_text=Enter a message for the receiver
 wizard.send_invitations.invitation_text_sample=
 wizard.send_invitations.join=Invitation files are required to join a folder.
@@ -1331,39 +1331,39 @@ wizard.send_invitations.save_to_file=Save as file
 wizard.send_invitations.send_by_mail=Send by mail
 wizard.send_invitations.send_invitation=Send invitation
 wizard.send_invitations.title=Save invitation
-wizard.sendinvitations.offline=Not connected
-wizard.sendinvitations.sendsuccess=Invitation sent
-wizard.sendinvitations.sendsuccessinfo=You successfully sent the invitation.
-wizard.setup_folder.sendinvitation=Send invitations afterwards
+wizard.send_invitations.offline=Not connected
+wizard.send_invitations.send_success=Invitation sent
+wizard.send_invitations.send_success_info=You successfully sent the invitation.
+wizard.setup_folder.send_invitation=Send invitations afterwards
 wizard.setup_folder.title=Create Folder
 wizard.setup_folder.transfer_mode=Transfer mode
-wizard.setupdns.dyndnshomepage=Dyndns Homepage
-wizard.setupdns.enterdns=Enter your (dynamic) dns
-wizard.setupdns.improvesread=It improves your reachability. However this is not required
-wizard.setupdns.nodnssetup=You have not setup a (dynamic) dns address yet\!
-wizard.setupdns.title=Setup (dynamic) dns
-wizard.setupdns.validate=Validate
-wizard.setupsuccess=Setup successfully
-wizard.successjoin=You have successfully joined the folder\!
+wizard.setup_dns.dyn_dns_home_page=Dyndns Homepage
+wizard.setup_dns.enter_dns=Enter your (dynamic) dns
+wizard.setup_dns.improves_read=It improves your reachability. However this is not required
+wizard.setup_dns.no_dns_setup=You have not setup a (dynamic) dns address yet\!
+wizard.setup_dns.title=Setup (dynamic) dns
+wizard.setup_dns.validate=Validate
+wizard.setup_success=Setup successfully
+wizard.success_join=You have successfully joined the folder\!
 wizard.sync_pcs_panel.select=Please select the directory which should be synchronized
-wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder mirror\!\n
-wizard.syncpcspanel.pcsjoin=Other computers can join this folder now
-wizard.webservice.enteraccount=Please enter your account details to login to Online Storage
-wizard.webservice.learnmore=What is PowerFolder Online Storage?
+wizard.sync_pcs_panel.folder_sync_success=You successfully set up a folder mirror\!\n
+wizard.sync_pcs_panel.pcs_join=Other computers can join this folder now
+wizard.webservice.enter_account=Please enter your account details to login to Online Storage
+wizard.webservice.learn_more=What is PowerFolder Online Storage?
 wizard.webservice.login=Online Storage Login
-wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by PowerFolder Online Storage
-wizard.webservice.mirrorsetup=Backup Folder by Online Storage
+wizard.webservice.mirror_choose_folder=Choose a folder to be backed up by PowerFolder Online Storage
+wizard.webservice.mirror_setup=Backup Folder by Online Storage
 wizard.webservice.password=Password
 wizard.webservice.register=Register New Account
 wizard.webservice.username=Email
-wizard.whattodo.backup_folder=Backup a folder
-wizard.whattodo.custom_sync=Advanced setup
-wizard.whattodo.hostwork=Share/Send a folder
-wizard.whattodo.load_invite=Open invitation file
-wizard.whattodo.openonlinedocumentation=Open online documentation
-wizard.whattodo.projectwork=Setup a synced project
-wizard.whattodo.synchronized_folder=Synchronize computer
-wizard.whattodo.title=What do you want to do?
+wizard.what_to_do.backup_folder=Backup a folder
+wizard.what_to_do.custom_sync=Advanced setup
+wizard.what_to_do.host_work=Share/Send a folder
+wizard.what_to_do.load_invite=Open invitation file
+wizard.what_to_do.open_online_documentation=Open online documentation
+wizard.what_to_do.project_work=Setup a synced project
+wizard.what_to_do.synchronized_folder=Synchronize computer
+wizard.what_to_do.title=What do you want to do?
 
 
 wizard.send_invitations.send_by_mail.cc_me=Add me as CC recipient
