#820 - Fix some hard coded labels, fixes #820

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -239,6 +239,8 @@ dialog.update_check.title=Newer version available
 dialog.user_select.online_only=
 dialog.user_select.text=Select users to invite. Hold down Ctrl key to select multiple users.
 dialog.user_select.title=Select Users
+dialog.update.updating=Updating
+dialog.update.updating.text=Downloading update
 
 disable_silent_mode.description=Silent mode currently active, added/modified files won't be found. Press for full mode
 disable_silent_mode.key=w
@@ -597,6 +599,7 @@ general.time=%02d\:%02d\:%02d
 general.today=Today
 general.tuesday=Tuesday
 general.uploads=Uploads
+general.update=Update
 general.webservice=Online Storage
 general.wednesday=Wednesday
 general.what_is_this=What is this?
