#278 - I18N look and feel

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -651,6 +651,19 @@ line_speed.upload_speed=Upload limit
 
 load_invitation.title=Join a folder from an invitation file
 
+look_and_feel.standard=Standard
+look_and_feel.black_moon=Black Moon
+look_and_feel.black_star=Black Star
+look_and_feel.blue_ice=Blue Ice
+look_and_feel.blue_moon=Blue Moon
+look_and_feel.blue_steel=Blue Steel
+look_and_feel.green_dream=Green Dream
+look_and_feel.mauve_metallic=Mauve Metallic
+look_and_feel.orange_metallic=Orange Metallic
+look_and_feel.silver_moon=Silver Moon
+look_and_feel.sky_metallic=Sky Metallic
+look_and_feel.white_vision=White Vision
+
 low_memory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
 low_memory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
 low_memory.do_nothing=Do Nothing
