--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -754,13 +754,8 @@ online_storage.account_data=Unable to login. Are account details correct?
 online_storage.general_error=There was an error logging in\: ({0}).
 
 online_label.connecting=Connecting
-online_label.connecting.text=You are online, but connected to very few users. Wait a short time to get fully connected. If still not, read the FAQ @ http\://www.powerfolder.com
 online_label.disabled=Disabled
-online_label.disabled.text=PowerFolder is currently disabled.
-online_label.offline=Offline
-online_label.offline.text=You are offline. Not connected to any user on the PowerFolder network
 online_label.online=Online
-online_label.online.text=You are online
 
 open_local_folder.description=Opens folder in your operating systems file explorer
 open_local_folder.key=F
@@ -1160,9 +1155,12 @@ start_downloads.description=Opens the selected downloaded files
 start_downloads.key=O
 start_downloads.name=Open
 
-status.download=Down\: %.2f KB/s
+status.download=%.2f KB/s
+status.download.text=This is the rate at which data is being downloaded.
 status.port=Port\: {0}
-status.upload=Up\: %.2f KB/s
+status.port.text=This is the PowerFolder connection port number.
+status.upload=%.2f KB/s
+status.upload.text=This is the rate at which data is being uploaded.
 
 status_bar.status_change.connected=PowerFolder is connected
 status_bar.status_change.disabled=PowerFolder is disabled
