--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -66,8 +66,8 @@ about.dialog.your_system.screen=Screen\: {0}x{1}
 about.dialog.your_system.title=Your System
 about.dialog_about_tab=about
 about.dialog_contributers_tab=team
-about.key=h
-about.name=Help
+about.key=a
+about.name=About
 
 about_web_service.description=Opens the Online Storage in default browser
 about_web_service.key=A
