#278 - introduce tabbed pane UI component

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -675,6 +675,16 @@ low_memory.error.text=PowerFolder requires more memory in your configuration.\n\
 
 master_node.nobody=- nobody -
 
+main_tabbed_pane.computers.description=Details about other PowerFolder computers
+main_tabbed_pane.computers.key=C
+main_tabbed_pane.computers.name=Computers
+main_tabbed_pane.folders.description=Details about other PowerFolder folders
+main_tabbed_pane.folders.key=F
+main_tabbed_pane.folders.name=Folders
+main_tabbed_pane.home.description=Over all information about PowerFolder
+main_tabbed_pane.home.key=H
+main_tabbed_pane.home.name=Home
+
 member.friend=Friend
 member.non_mutual_friend=None mutual friend
 member.on_lan=On LAN
@@ -1156,11 +1166,10 @@ start_downloads.key=O
 start_downloads.name=Open
 
 status.download=%.2f KB/s
-status.download.text=This is the rate at which data is being downloaded.
-status.port=Port\: {0}
-status.port.text=This is the PowerFolder connection port number.
+status.download.text=Data download rate
+status.port.text=PowerFolder connection port number
 status.upload=%.2f KB/s
-status.upload.text=This is the rate at which data is being uploaded.
+status.upload.text=Data upload rate
 
 status_bar.status_change.connected=PowerFolder is connected
 status_bar.status_change.disabled=PowerFolder is disabled
