#278 - add tab toolbars

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -1,5 +1,8 @@
 # this file contains the images used in buttons
 
+action_new_folder.icon=icons/Directory_new.gif
+action_search_computer.icon=icons/Search_computer.gif
+
 #customer_small.icon=icons/Autofusion_small.png
 #customer_big.icon=icons/Autofusion_big.png
 
