--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -27,6 +27,13 @@ online_storage_change_account.key=C
 online_storage_change_account.description=Changes the user that is currently logged into the Online Storage
 online_storage.connecting=Connecting to server
 
+action_new_folder.description=Create a new folder
+action_new_folder.key=N
+action_new_folder.name=New Folder
+
+action_search_computer.description=Search for other computers
+action_search_computer.key=S
+action_search_computer.name=Search Computer
 
 abort_copy.description=Abort the copy process
 abort_copy.key=A
