#278 - move used v4 actions to action package

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -27,6 +27,14 @@ online_storage_change_account.key=C
 online_storage_change_account.description=Changes the user that is currently logged into the Online Storage
 online_storage.connecting=Connecting to server
 
+action_open_about_box.description=Shows information about PowerFolder
+action_open_about_box.key=a
+action_open_about_box.name=About
+
+action_open_preferences.key=P
+action_open_preferences.name=Preferences
+action_open_preferences.description=Opens the preferences dialog
+
 action_new_folder.description=Create a new folder
 action_new_folder.key=N
 action_new_folder.name=New Folder
@@ -47,7 +55,6 @@ abort_transfer.description=Aborts the selected transfer
 abort_transfer.key=a
 abort_transfer.name=Abort Transfer(s)
 
-about.description=Shows information about PowerFolder
 about.dialog.check_for_updates=Check For Updates
 about.dialog.check_for_updates.key=U
 about.dialog.contributers=Contributers
@@ -73,8 +80,6 @@ about.dialog.your_system.screen=Screen\: {0}x{1}
 about.dialog.your_system.title=Your System
 about.dialog_about_tab=about
 about.dialog_contributers_tab=team
-about.key=a
-about.name=About
 
 about_web_service.description=Opens the Online Storage in default browser
 about_web_service.key=A
@@ -804,7 +809,7 @@ plugin_settings.description=Open the settings for this plugin
 plugin_settings.key=S
 plugin_settings.name=Settings
 
-preferences.description=Opens the preferences
+
 preferences.dialog.advPort=Port
 preferences.dialog.advPort.tooltip=Enter a ","-separated list of ports PowerFolder should listen for connections
 preferences.dialog.advanced.title=Advanced
@@ -915,8 +920,6 @@ preferences.dialog.warnningMessage=Warning
 preferences.dialog.exit_behavior=Exit behavior
 preferences.dialog.exit_behavior.exit=Exit program
 preferences.dialog.exit_behavior.minimize=Minimize to system tray
-preferences.key=p
-preferences.name=Preferences
 
 preview_folder_remove.description=Remove this PowerFolder preview
 preview_folder_remove.dialog.text=Remove PowerFolder {0}?
