#278 - move connect action to action model

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -27,6 +27,10 @@ online_storage_change_account.key=C
 online_storage_change_account.description=Changes the user that is currently logged into the Online Storage
 online_storage.connecting=Connecting to server
 
+action_connect.description=Manually connects to a PowerFolder user
+action_connect.key=c
+action_connect.name=Connect
+
 action_open_about_box.description=Shows information about PowerFolder
 action_open_about_box.key=a
 action_open_about_box.name=About
@@ -135,11 +139,8 @@ clear_completed_downloads.description=Clears the list of the recently completed 
 clear_completed_downloads.key=c
 clear_completed_downloads.name=Cleanup
 
-connect.description=Manually connects to a PowerFolder user
 connect.dialog.text=Please enter the hostname or ip of the user you want to connect.\n\nPowerFolder automatically connects to the network after a short time,\nuse this option if you want to manually connect to a user.\n
 connect.dialog.title=Manually connect to a PowerFolder user
-connect.key=c
-connect.name=Connect
 
 console.update_check.new_development_version=------------ New development version downloaded ------------
 
