#278 - add sync text to home tab.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -629,6 +629,10 @@ hide_offline.description=Offline users will be filtered from this search result
 hide_offline.key=H
 hide_offline.name=Hide offline users
 
+home_tab.in_sync=All folders are synchronized.
+home_tab.synchronizing=Synchroniation in progress...
+home_tab.you_have=You have:
+
 image_file_info.resolution=Resolution
 image_file_info.unknown=Unknown
 
