#278 - display number of folders in home tab

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -632,6 +632,7 @@ hide_offline.name=Hide offline users
 home_tab.in_sync=All folders are synchronized.
 home_tab.synchronizing=Synchroniation in progress...
 home_tab.you_have=You have:
+home_tab.folders=Folder(s)
 
 image_file_info.resolution=Resolution
 image_file_info.unknown=Unknown
