#278 - display total size of folders in home tab

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -633,6 +633,10 @@ home_tab.in_sync=All folders are synchronized.
 home_tab.synchronizing=Synchroniation in progress...
 home_tab.you_have=You have:
 home_tab.folders=Folder(s)
+home_tab.total_bytes=Byte(s) Total
+home_tab.total_kilobytes=KB(s) Total
+home_tab.total_megabytes=MB(s) Total
+home_tab.total_gigabytes=GB(s) Total
 
 image_file_info.resolution=Resolution
 image_file_info.unknown=Unknown
