#278 - display uploads and downloads in home tab

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -637,6 +637,8 @@ home_tab.total_bytes=Byte(s) Total
 home_tab.total_kilobytes=KB(s) Total
 home_tab.total_megabytes=MB(s) Total
 home_tab.total_gigabytes=GB(s) Total
+home_tab.files_downloaded=File(s) Downloaded
+home_tab.files_uploaded=File(s) Uploaded
 
 image_file_info.resolution=Resolution
 image_file_info.unknown=Unknown
