--- a/.classpath
+++ b/.classpath
@@ -18,26 +18,26 @@
 	<classpathentry kind="lib" path="lib/jmock/jmock-junit3-2.4.0.jar"/>
 	<classpathentry kind="lib" path="lib/jmock/jmock-junit4-2.4.0.jar"/>
 	<classpathentry kind="lib" path="lib/jmock/jmock-legacy-2.4.0.jar"/>
-    <classpathentry kind="lib" path="lib/jmock/objenesis-1.0.jar"/>
-    <classpathentry kind="lib" path="synthetica/commons-logging-1.1.jar"/>
-    <classpathentry kind="lib" path="synthetica/flexdock.jar"/>
-    <classpathentry kind="lib" path="synthetica/swing-worker-1.1.jar"/>
-    <classpathentry kind="lib" path="synthetica/swingx.jar"/>
-    <classpathentry kind="lib" path="synthetica/synthetica.jar"/>
-    <classpathentry kind="lib" path="synthetica/syntheticaAddons.jar"/>
-    <classpathentry kind="lib" path="synthetica/syntheticaBlackMoon.jar"/>
-    <classpathentry kind="lib" path="synthetica/syntheticaBlackStar.jar"/>
-    <classpathentry kind="lib" path="synthetica/syntheticaBlueIce.jar"/>
-    <classpathentry kind="lib" path="synthetica/syntheticaBlueMoon.jar"/>
-    <classpathentry kind="lib" path="synthetica/syntheticaBlueSteel.jar"/>
-    <classpathentry kind="lib" path="synthetica/syntheticaGreenDream.jar"/>
-    <classpathentry kind="lib" path="synthetica/syntheticaMauveMetallic.jar"/>
-    <classpathentry kind="lib" path="synthetica/syntheticaOrangeMetallic.jar"/>
-    <classpathentry kind="lib" path="synthetica/syntheticaSilverMoon.jar"/>
-    <classpathentry kind="lib" path="synthetica/syntheticaSkyMetallic.jar"/>
-    <classpathentry kind="lib" path="synthetica/syntheticaWhiteVision.jar"/>
+	<classpathentry kind="lib" path="lib/jmock/objenesis-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/forms-1.2.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/validation-2.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/binding-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/synthetica/commons-logging-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/synthetica/flexdock.jar"/>
+	<classpathentry kind="lib" path="lib/synthetica/swing-worker-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/synthetica/swingx.jar"/>
+	<classpathentry kind="lib" path="lib/synthetica/synthetica.jar"/>
+	<classpathentry kind="lib" path="lib/synthetica/syntheticaAddons.jar"/>
+	<classpathentry kind="lib" path="lib/synthetica/syntheticaBlackMoon.jar"/>
+	<classpathentry kind="lib" path="lib/synthetica/syntheticaBlackStar.jar"/>
+	<classpathentry kind="lib" path="lib/synthetica/syntheticaBlueIce.jar"/>
+	<classpathentry kind="lib" path="lib/synthetica/syntheticaBlueMoon.jar"/>
+	<classpathentry kind="lib" path="lib/synthetica/syntheticaBlueSteel.jar"/>
+	<classpathentry kind="lib" path="lib/synthetica/syntheticaGreenDream.jar"/>
+	<classpathentry kind="lib" path="lib/synthetica/syntheticaMauveMetallic.jar"/>
+	<classpathentry kind="lib" path="lib/synthetica/syntheticaOrangeMetallic.jar"/>
+	<classpathentry kind="lib" path="lib/synthetica/syntheticaSilverMoon.jar"/>
+	<classpathentry kind="lib" path="lib/synthetica/syntheticaSkyMetallic.jar"/>
+	<classpathentry kind="lib" path="lib/synthetica/syntheticaWhiteVision.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
