#278 - better layout for expandable folder views

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -288,6 +288,9 @@ enable_silent_mode.name=Run Silently
 
 estimation.unknown=unknown
 
+exp_folder_view.files=Files: {0}
+exp_folder_view.transfer_mode=Transfer mode: {0}
+
 file_filter_panel.deleted_and_previous_files=Deleted and recycled files
 file_filter_panel.filter_by_filename.hint=Filter by filename
 file_filter_panel.filter_by_filename.tooltip=Filter results by filename
