#278 - some icons for about buttons

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -2,7 +2,7 @@
 
 action_new_folder.icon=icons/Directory_new.gif
 action_search_computer.icon=icons/Search_computer.gif
-action_open_preferences.icon=icons/Settings.gif
+action_open_preferences.icon=icons/Properties.gif
 action_open_about_box.icon=icons/information.png
 
 #customer_small.icon=icons/Autofusion_small.png
