--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1365,7 +1365,7 @@ wizard.load_invitation.select=Select invitation file
 wizard.load_invitation.select_file=Please select invitation file
 wizard.load_invitation.title=Load invitation
 wizard.login_online_storage.setup_default=Setup default synchronized folder.
-wizard.pfwizard.title=Wizard
+wizard.pfwizard.title=Folder Wizard
 wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
 wizard.project_panel.select=Please select the project directory
 wizard.project_name.choose=Choose project name
