#278 - nice wizard button icons

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1339,7 +1339,7 @@ wizard.choose_disk_location.directory_non_existent=WARNING: This directory does 
 wizard.choose_disk_location.directory_no_write=WARNING: This directory cannot be written to
 wizard.choose_disk_location.select=Select directory
 wizard.choose_disk_location.title=Disk location
-wizard.control.back=< Back
+wizard.control.back=Back
 wizard.control.back.description=Go to previous wizard step
 wizard.control.cancel=Cancel
 wizard.control.cancel.description=Cancel this wizard
@@ -1347,7 +1347,7 @@ wizard.control.finish=Finish
 wizard.control.finish.description=Finish this wizard task
 wizard.control.help=Help
 wizard.control.help.description=Show online help (Alt-8)
-wizard.control.next=Next >
+wizard.control.next=Next
 wizard.control.next.description=Go to next wizard step
 wizard.create_folder.failed=Failed to create PowerFolder.
 wizard.create_folder.title=Creating PowerFolder
