#278 - better expand / collapse icons

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -288,7 +288,8 @@ enable_silent_mode.name=Run Silently
 
 estimation.unknown=unknown
 
-exp_folder_view.expand_collapse=Expand / collapse
+exp_folder_view.expand=Expand
+exp_folder_view.collapse=Collapse
 exp_folder_view.synchronize_folder=Synchronize folder
 exp_folder_view.files=Files: {0}
 exp_folder_view.transfer_mode=Transfer mode: {0}
