#278 - Add files available to home tab.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -639,12 +639,13 @@ home_tab.in_sync=All folders are synchronized.
 home_tab.synchronizing=Synchroniation in progress...
 home_tab.you_have=You have:
 home_tab.folders=Folder(s)
-home_tab.total_bytes=Byte(s) Total
-home_tab.total_kilobytes=KB(s) Total
-home_tab.total_megabytes=MB(s) Total
-home_tab.total_gigabytes=GB(s) Total
-home_tab.files_downloaded=File(s) Downloaded
-home_tab.files_uploaded=File(s) Uploaded
+home_tab.total_bytes=Byte(s) total
+home_tab.total_kilobytes=KB(s) total
+home_tab.total_megabytes=MB(s) total
+home_tab.total_gigabytes=GB(s) total
+home_tab.files_available=File(s) available
+home_tab.files_downloaded=File(s) downloaded
+home_tab.files_uploaded=File(s) uploaded
 
 image_file_info.resolution=Resolution
 image_file_info.unknown=Unknown
