--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -639,6 +639,7 @@ home_tab.in_sync=All folders are synchronized.
 home_tab.synchronizing=Synchroniation in progress...
 home_tab.you_have=You have:
 home_tab.folders=Folder(s)
+home_tab.computers=Computer(s)
 home_tab.total_bytes=Byte(s) total
 home_tab.total_kilobytes=KB(s) total
 home_tab.total_megabytes=MB(s) total
