--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -291,6 +291,7 @@ estimation.unknown=unknown
 exp_folder_view.expand=Expand
 exp_folder_view.collapse=Collapse
 exp_folder_view.synchronize_folder=Synchronize folder
+exp_folder_view.synchronized={0}% synchronized
 exp_folder_view.files=Files: {0}
 exp_folder_view.transfer_mode=Transfer mode: {0}
 
