#278 - show total size in folder view

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -294,6 +294,9 @@ exp_folder_view.synchronize_folder=Synchronize folder
 exp_folder_view.synchronized={0}% synchronized
 exp_folder_view.files=Files: {0}
 exp_folder_view.transfer_mode=Transfer mode: {0}
+exp_folder_view.total_kilobytes={0}KB(s) total
+exp_folder_view.total_megabytes={0}MB(s) total
+exp_folder_view.total_gigabytes={0}GB(s) total
 
 file_filter_panel.deleted_and_previous_files=Deleted and recycled files
 file_filter_panel.filter_by_filename.hint=Filter by filename
