--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -293,6 +293,7 @@ exp_folder_view.collapse=Collapse
 exp_folder_view.synchronize_folder=Synchronize folder
 exp_folder_view.synchronized={0}% synchronized
 exp_folder_view.files=Files: {0}
+exp_folder_view.members=Members: {0}
 exp_folder_view.transfer_mode=Transfer mode: {0}
 exp_folder_view.total_kilobytes={0}KB(s) total
 exp_folder_view.total_megabytes={0}MB(s) total
