#278 - Adjustments to preferences for new Synthetica look

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -916,7 +916,7 @@ preferences.dialog.show_system_notifications=Show system notifications when mini
 preferences.dialog.show_advanced=Show advanced preferences
 preferences.dialog.show_preview_panel=Enable internal image preview
 preferences.dialog.show_preview_panel.tooltip=<HTML><BODY>You can find the image preview under My PowerFolders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
-preferences.dialog.silent_throttle=Silentmode bandwidth throttle
+preferences.dialog.silent_throttle=Silent mode throttle
 preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
 preferences.dialog.small_toolbar=Use small toolbar icons
 preferences.dialog.startPanel=Start panel
