#278 - Add online storage line to HomeTab

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -654,7 +654,9 @@ home_tab.total_gigabytes=GB(s) total
 home_tab.files_available=File(s) available
 home_tab.files_downloaded=File(s) downloaded
 home_tab.files_uploaded=File(s) uploaded
-
+home_tab.online_storage.not_setup=No Online Storage account set up
+home_tab.online_storage.account=Account: {0}
+home_tab.online_storage.account_connecting=Account: {0} connecting...
 image_file_info.resolution=Resolution
 image_file_info.unknown=Unknown
 
