#278 - Add online storage disabled option to HomeTab

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -657,6 +657,7 @@ home_tab.files_uploaded=File(s) uploaded
 home_tab.online_storage.not_setup=No Online Storage account set up
 home_tab.online_storage.account=Account: {0}
 home_tab.online_storage.account_connecting=Account: {0} connecting...
+home_tab.online_storage.account_disabled=Account: {0} disabled
 image_file_info.resolution=Resolution
 image_file_info.unknown=Unknown
 
