#278 - Add online storage usage to HomeTab

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -658,6 +658,8 @@ home_tab.online_storage.not_setup=No Online Storage account set up
 home_tab.online_storage.account=Account: {0}
 home_tab.online_storage.account_connecting=Account: {0} connecting...
 home_tab.online_storage.account_disabled=Account: {0} disabled
+home_tab.online_storage.usage=Usage: {0}%
+
 image_file_info.resolution=Resolution
 image_file_info.unknown=Unknown
 
