#278 - Add online storage trial info to HomeTab

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -659,6 +659,7 @@ home_tab.online_storage.account=Account: {0}
 home_tab.online_storage.account_connecting=Account: {0} connecting...
 home_tab.online_storage.account_disabled=Account: {0} disabled
 home_tab.online_storage.usage=Usage: {0}%
+home_tab.online_storage.remaining={0} day(s) remaining
 
 image_file_info.resolution=Resolution
 image_file_info.unknown=Unknown
